--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ input{
     text-align:center;
     font-size:25px;
     padding:5px;
-    background-color:lightgreen;
+    background-color:pink;
     border-radius:10px;
 }
 button{
